# sdbackground

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: docker-image.yml
cfg/: sdbg.cfg
docker/: Dockerfile.kinetic  Dockerfile.melodic
launch/: webcam_test.launch  webcam_test2.launch
src/: sdbackground.cpp  sdbackground_node.cpp  sdbackground_wrapper.h
test/unit/: sdbackground_wrapper_test.h  test_sdbackground.cpp
test/unit/ground_truth/: E_001.pgm  E_002.pgm  E_003.pgm  E_004.pgm  E_005.pgm  E_006.pgm  E_007.pgm  E_008.pgm  E_009.pgm  E_010.pgm  E_011.pgm  E_012.pgm  E_013.pgm  E_014.pgm  E_015.pgm  E_016.pgm  E_017.pgm  E_018.pgm  E_019.pgm  E_020.pgm  E_021.pgm  E_022.pgm  E_023.pgm  E_024.pgm  E_025.pgm  E_026.pgm  E_027.pgm  E_028.pgm  E_029.pgm  E_030.pgm  E_031.pgm  E_032.pgm  E_033.pgm  E_034.pgm  E_035.pgm  E_036.pgm  E_037.pgm  E_038.pgm  E_039.pgm  E_040.pgm  (+159 more)
