<?xml version="1.0"?>
<package format="2">
  <name>sdbackground</name>
  <version>0.0.1</version>
  <description>Sigma Delta background extraction</description>

  <maintainer email="thomas.simon@ensta-paris.fr">Thomas SIMON</maintainer>

  <license>NONE, DO NOT SHARE, SAMPLE PACKAGE</license>

  <author email="antoine.manzanera@ensta-paris.fr">"Antoine Manzanera" </author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
